--- a/vuejs-md/package.json
+++ b/vuejs-md/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase": "^5.3.1",
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-10.2",
