--- a/vuejs-md/package.json
+++ b/vuejs-md/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.2",
     "vue-material": "^1.0.0-beta-10.2",
     "vue-router": "^3.0.1",
-    "vue-sweetalert2": "^1.5.2"
+    "vue-sweetalert2": "^1.5.2",
+    "vue-toasted": "^1.1.24"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
